updated readme. Changed build scripts to put source in asar archives. Added build scripts for ios, osx, and all (all are untested at this point)

--- a/package.json
+++ b/package.json
@@ -47,14 +47,20 @@
     "build": "cross-env npm run clean && npm run build:webpack",
     "clean": "cross-env rimraf ./public",
     "build:webpack": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js",
-    "win64-packager": "./node_modules/.bin/electron-packager ./ my_app --platform=win32 --arch=x64 --ignore=node_modules --ignore=Client --ignore=webpack.* --ignore=README.*",
-    "win32-packager": "./node_modules/.bin/electron-packager ./ my_app --platform=win32 --arch=ia32 --ignore=node_modules --ignore=Client --ignore=webpack.* --ignore=README.*",
-    "linux64-packager": "./node_modules/.bin/electron-packager ./ my_app --platform=linux --arch=x64 --ignore=node_modules --ignore=Client --ignore=webpack.* --ignore=README.*",
-    "linux32-packager": "./node_modules/.bin/electron-packager ./ my_app --platform=linux --arch=ia32 --ignore=node_modules --ignore=Client --ignore=webpack.* --ignore=README.*",
+    "win64-packager": "./node_modules/.bin/electron-packager ./ my_app --platform=win32 --arch=x64 --ignore=node_modules --ignore=Client --ignore=webpack.* --ignore=README.* --asar",
+    "win32-packager": "./node_modules/.bin/electron-packager ./ my_app --platform=win32 --arch=ia32 --ignore=node_modules --ignore=Client --ignore=webpack.* --ignore=README.* --asar",
+    "linux64-packager": "./node_modules/.bin/electron-packager ./ my_app --platform=linux --arch=x64 --ignore=node_modules --ignore=Client --ignore=webpack.* --ignore=README.* --asar",
+    "linux32-packager": "./node_modules/.bin/electron-packager ./ my_app --platform=linux --arch=ia32 --ignore=node_modules --ignore=Client --ignore=webpack.* --ignore=README.* --asar",
+    "osx-packager": "./node_modules/.bin/electron-packager ./ my_app --platform=darwin --ignore=node_modules --ignore=Client --ignore=webpack.* --ignore=README.* --asar",
+    "ios-packager": "./node_modules/.bin/electron-packager ./ my_app --platform=darwin --ignore=node_modules --ignore=Client --ignore=webpack.* --ignore=README.* --asar",
+    "all-packager": "./node_modules/.bin/electron-packager ./ my_app --all --ignore=node_modules --ignore=Client --ignore=webpack.* --ignore=README.* --asar",
     "build-win64": "cross-env npm run build && npm run win64-packager",
     "build-win32": "cross-env npm run build && npm run win32-packager",
     "build-linux64": "cross-env npm run build && npm run linux64-packager",
-    "build-linux32": "cross-env npm run build && npm run linux32-packager"
+    "build-linux32": "cross-env npm run build && npm run linux32-packager",
+    "build-osx": "cross-env npm run build && npm run osx-packager",
+    "build-ios": "cross-env npm run build && npm run ios-packager",
+    "build-all": "cross-env npm run build && npm run all-packager"
   },
   "dependencies": {
     "electron-prebuilt": "^0.37.2",
