--- a/package.json
+++ b/package.json
@@ -63,7 +63,9 @@
     "build-all": "cross-env npm run build && npm run all-packager"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "electron-prebuilt": "^0.37.2",
+    "jquery": "^3.1.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.3"
   }
